# standup_helper

./: .env.example  .gitignore  README.md  pyproject.toml
standup_helper/: jira.py  llm.py  main.py  toggl.py
